{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 28,
  "lineage": "60a52d0a-6e53-b9b0-22f3-9de1af956997",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chow3-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07860a2d7eb515d9a",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-034f48e2295efd982",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034f48e2295efd982",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0682ecf8b3e92436a"
              }
            ],
            "primary_network_interface_id": "eni-0682ecf8b3e92436a",
            "private_dns": "ip-10-0-1-253.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.253",
            "public_ip": "100.24.106.224",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:853973692277:key/19008ab6-3d44-4b37-9c2b-bdcc09df76b1",
                "throughput": 125,
                "volume_id": "vol-03448ae80b73c4b87",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c968abf48d242de5",
            "tags": {
              "Name": "chow3-vm"
            },
            "tags_all": {
              "Name": "chow3-vm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ceb16de3e9aecc70"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "i-034f48e2295efd982",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.chow3-sg",
            "aws_subnet.chow3-vpc-public-subnet",
            "aws_vpc.chow3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chow3-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:internet-gateway/igw-03d787965f89989ce",
            "id": "igw-03d787965f89989ce",
            "owner_id": "853973692277",
            "region": "us-east-1",
            "tags": {
              "Name": "chow3-igw"
            },
            "tags_all": {
              "Name": "chow3-igw"
            },
            "vpc_id": "vpc-05106d95df06b91bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.chow3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chow3-vpc-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:route-table/rtb-0ac87a379b22276fd",
            "id": "rtb-0ac87a379b22276fd",
            "owner_id": "853973692277",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d787965f89989ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chow3-vpc-routetable"
            },
            "tags_all": {
              "Name": "chow3-vpc-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-05106d95df06b91bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "rtb-0ac87a379b22276fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.chow3-igw",
            "aws_vpc.chow3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chow3-public-subnet-assoc-to-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ae5041775640a00",
            "region": "us-east-1",
            "route_table_id": "rtb-0ac87a379b22276fd",
            "subnet_id": "subnet-0c968abf48d242de5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.chow3-igw",
            "aws_route_table.chow3-vpc-routetable",
            "aws_subnet.chow3-vpc-public-subnet",
            "aws_vpc.chow3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chow3-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:security-group/sg-0ceb16de3e9aecc70",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ceb16de3e9aecc70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "chow3-sg",
            "name_prefix": "",
            "owner_id": "853973692277",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chow3-sg"
            },
            "tags_all": {
              "Name": "chow3-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05106d95df06b91bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "sg-0ceb16de3e9aecc70",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chow3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Allow-all-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4189801029",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ceb16de3e9aecc70",
            "security_group_rule_id": "sgr-0fe83e004bc3bf163",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65355,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chow3-sg",
            "aws_vpc.chow3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Allow-inbound-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3643319020",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ceb16de3e9aecc70",
            "security_group_rule_id": "sgr-0281dc33dec98a1a4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chow3-sg",
            "aws_vpc.chow3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Allow-inbound-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1872953177",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ceb16de3e9aecc70",
            "security_group_rule_id": "sgr-024fc66d79b10c395",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.chow3-sg",
            "aws_vpc.chow3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chow3-vpc-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:subnet/subnet-0c968abf48d242de5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c968abf48d242de5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "853973692277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "chow3-public-subnet"
            },
            "tags_all": {
              "Name": "chow3-public-subnet"
            },
            "vpc_id": "vpc-05106d95df06b91bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "subnet-0c968abf48d242de5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.chow3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chow3-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:vpc/vpc-05106d95df06b91bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004de5faef396740b",
            "default_route_table_id": "rtb-0d2769fe872b02689",
            "default_security_group_id": "sg-0b3934340b531548b",
            "dhcp_options_id": "dopt-00956455b1342abe4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05106d95df06b91bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2769fe872b02689",
            "owner_id": "853973692277",
            "region": "us-east-1",
            "tags": {
              "Name": "chow3-vpc"
            },
            "tags_all": {
              "Name": "chow3-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "853973692277",
            "id": "vpc-05106d95df06b91bb",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}